make changes to prevent horizontal overflow

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
 body {
     margin: 0px;
-    width: 100vw;
 }
 
 nav {
@@ -147,7 +146,7 @@ nav ul li a {
     box-shadow: 20px 10px;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 680px) {
     #home-about img {
         width: 300px;
     }
